<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/usernameRegistration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Text_Uregistration"
        android:inputType="text" />

    <EditText
        android:id="@+id/emailRegistration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Text_Eregistration"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/passwordRegistration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Text_Pregistration"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/confirmpasswordRegistration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Text_Pregistrationconfirm"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration_button"
        android:backgroundTint="@color/orange"
        android:layout_gravity="center" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1" />
    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_button"
        android:backgroundTint="@color/orange"
        android:layout_gravity="center" />
</LinearLayout>
